--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "xterm": "^5.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -33,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "styled-jsx": "^5.1.7",
     "vite": "^6.3.1"
   }
 }
