--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-tsparticles": "^2.12.2",
     "three": "^0.176.0",
