--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,21 @@
+# docker-compose.prod.yaml
 services:
   frontend:
     container_name: frontend_service
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules    
-    ports:
-      - "5173:5173"
+      dockerfile: Dockerfile.prod
     networks:
       - portfolio_network
-    restart: always 
-    command: npm run dev -- --host 0.0.0.0 
-    
+    restart: always
      
   backend:
     container_name: backend_service
     build:
       context: ./backend
       dockerfile: Dockerfile.backend
-    ports:
-      - "5000:5000"
     volumes:
-      - ./backend:/app
+      - ./data:/app/data
     env_file:
       - .env
     networks:
@@ -32,12 +24,12 @@ services:
 
   nginx:
     container_name: nginx_proxy
-    image: nginx:latest
+    image: nginx:stable-alpine
     ports:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/sites-enabled:/etc/nginx/sites-enabled
+      - ./nginx/sites-enabled/reverse_proxy.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
       - backend
