--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "styled-jsx": "^5.1.7",
+    "terser": "^5.39.0",
     "vite": "^6.3.1"
   }
 }
