--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "framer-motion": "^12.9.4",
     "gsap": "^3.13.0",
     "phosphor-react": "^1.4.1",
@@ -21,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-tsparticles": "^2.12.2",
+    "rollup-plugin-visualizer": "^5.14.0",
     "three": "^0.176.0",
     "tsparticles": "^3.8.1",
     "xterm": "^5.3.0"
@@ -38,6 +40,7 @@
     "globals": "^16.0.0",
     "styled-jsx": "^5.1.7",
     "terser": "^5.39.0",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-imagemin": "^0.1.0"
   }
 }
