--- a/nginx/sites-enabled/reverse_proxy.conf
+++ b/nginx/sites-enabled/reverse_proxy.conf
@@ -1,27 +1,72 @@
-# nginx/sites-enabled/reverse_proxy.conf
 server {
     listen 80;
     listen [::]:80;
     server_name _;
 
-    # Security headers
+
     add_header X-Content-Type-Options nosniff;
     add_header X-Frame-Options SAMEORIGIN;
     add_header X-XSS-Protection "1; mode=block";
 
-    # Gzip compression
+
     gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_comp_level 6;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+        application/atom+xml
+        application/javascript
+        application/json
+        application/ld+json
+        application/manifest+json
+        application/rss+xml
+        application/vnd.geo+json
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/bmp
+        image/svg+xml
+        image/x-icon
+        text/cache-manifest
+        text/css
+        text/plain
+        text/vcard
+        text/vnd.rim.location.xloc
+        text/vtt
+        text/x-component
+        text/x-cross-domain-policy;
 
-    # Increase request body size limit
-    client_max_body_size 10M;
+
+    client_max_body_size 40M;
 
 
+    location ~* \.(jpg|jpeg|png|webp|gif|ico|svg|woff|woff2|ttf|css|js)$ {
+        proxy_pass http://frontend_service:80;
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000, immutable";
+        access_log off;
+        
+
+        tcp_nodelay on;
+        sendfile on;
+        tcp_nopush on;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 
 
     location = /index.html {
         proxy_pass http://frontend_service:80;
-
+        add_header Cache-Control "no-cache";
+        
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -30,15 +75,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
-        # DO NOT put try_files in here
     }
-
-
 
 
     location / {
         proxy_pass http://frontend_service:80;
-
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -48,37 +89,36 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
 
+        # Enable caching for general assets
+        proxy_cache_valid 200 302 10m;
+        proxy_cache_valid 404 1m;
 
         try_files $uri $uri/ /index.html;
     }
 
 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        proxy_pass http://frontend_service:80; # Use port 80
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-
     location /api/ {
         proxy_pass http://backend_service:5000/;
-
         proxy_http_version 1.1;
-        proxy_buffering off;
+        proxy_buffering on;  
+        proxy_buffer_size 16k;
+        proxy_busy_buffers_size 24k;
+        proxy_buffers 64 4k;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
+        # Increased timeouts for larger requests
         proxy_connect_timeout 300;
         proxy_send_timeout 300;
         proxy_read_timeout 300;
         send_timeout 300;
+        
+        access_log off;
     }
+    
+
+    gzip_static on;
 }
