--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+# backend/requirements.txt (adding flask-limiter)
 annotated-types==0.7.0
 anyio==4.6.2.post1
 bidict==0.23.1
@@ -7,6 +8,8 @@ click==8.1.7
 dnspython==2.7.0
 Flask==3.0.3
 Flask-SocketIO==5.4.1
+Flask-Limiter==3.5.0
+limits==3.7.0
 httpx==0.27.2
 idna==3.10
 itsdangerous==2.2.0
@@ -36,4 +39,3 @@ faker
 tzdata
 Flask-Migrate
 psutil
-
